--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
   "name": "swagger-validator",
   "publisher": "emsav",
-  "repository": "local",
-  "displayName": "swagger-validator",
+  "license": "MIT",
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/msavastano/swagger-validator-vs"
+	},
+  "displayName": "Swagger Validator",
   "description": "Validates swagger open-api specs",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.52.0"
   },
+	"keywords": [
+		"swagger",
+		"openapi",
+		"api",
+		"json",
+		"yaml"
+	],
+  "galleryBanner": {
+		"color": "#4a4a4a",
+		"theme": "dark"
+	},
+  "icon": "static/images/api.png",
   "categories": [
     "Other"
   ],
@@ -16,18 +32,11 @@
     "onLanguage:json"
   ],
   "main": "./extension.js",
-  "contributes": {
-    "commands": [
-      {
-				"command": "swagger.validate",
-				"title": "Validate Swagger"
-			}
-    ]
-  },
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
+    "test": "node ./test/runTest.js",
+    "package": "./node_modules/.bin/vsce package"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -37,6 +46,7 @@
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
+    "standard-version": "^9.1.0",
     "typescript": "^4.1.3",
     "vsce": "^1.85.0",
     "vscode-test": "^1.5.0"
