feat: multifile spec support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-validator",
-  "publisher": "emsav",
+  "publisher": "EmSav",
   "license": "MIT",
   "repository": {
     "type": "git",
