fix: webpack bundling

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "onLanguage:yaml",
     "onLanguage:json"
   ],
-  "main": "./extension.js",
+  "main": "./dist/extension.js",
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
